--- a/package.json
+++ b/package.json
@@ -5,18 +5,33 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && npm run copy-proto",
+    "build": "rm -rf dist && tsc && npm run copy-proto",
     "copy-proto": "copyfiles -u 1 src/**/*.proto dist",
-    "start": "node dist/index.js"
+    "start": "node dist/src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "apollo-server": "^3.13.0",
-    "express": "^4.19.2"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-graphql": "^0.12.0",
+    "express-jwt": "^7.7.8",
+    "graphql": "^15.9.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.2.2",
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20",
+    "typescript": "^5.5.2"
   },
   "devDependencies": {
     "copyfiles": "^2.4.1"
-  }
+  },
+  "type": "module"
 }
