--- a/package.json
+++ b/package.json
@@ -1,37 +1,32 @@
 {
-  "name": "x-node-gateway",
+  "name": "graphql-server-example",
   "version": "1.0.0",
-  "description": "node, gateway, graphql-for-frontends, grpc-for-services",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && tsc && npm run copy-proto",
-    "copy-proto": "copyfiles -u 1 src/**/*.proto dist",
-    "start": "node dist/src/index.js"
+    "generate": "graphql-codegen --config codegen.ts",
+    "compile": "rm -rf ./dist && npm run generate && tsc",
+    "start": "npm run compile && node ./dist/src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
+  "type": "module",
   "dependencies": {
-    "@types/body-parser": "^1.19.5",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "apollo-server": "^3.13.0",
-    "body-parser": "^1.20.2",
+    "@apollo/server": "^4.10.4",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-graphql": "^0.12.0",
-    "express-jwt": "^7.7.8",
-    "graphql": "^15.9.0",
-    "jsonwebtoken": "^9.0.2",
+    "graphql": "^16.9.0",
     "pg": "^8.12.0",
-    "reflect-metadata": "^0.2.2",
-    "ts-node": "^10.9.2",
-    "typeorm": "^0.3.20",
-    "typescript": "^5.5.2"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "copyfiles": "^2.4.1"
-  },
-  "type": "module"
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/introspection": "4.0.3",
+    "@graphql-codegen/typescript": "4.0.8",
+    "@graphql-codegen/typescript-document-nodes": "^4.0.8",
+    "@graphql-codegen/typescript-resolvers": "4.2.0",
+    "@types/node": "^20.14.9",
+    "typescript": "^5.5.2"
+  }
 }
