--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "graphql-codegen --config codegen.ts",
     "compile": "rm -rf ./dist && npm run generate && tsc",
-    "start": "npm run compile && node ./dist/src/index.js"
+    "start": "npm run compile && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,11 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "apollo-server-errors": "^3.3.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "typeorm": "^0.3.20"
   },
