--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "@grpc/grpc-js": "^1.10.10",
+    "@grpc/proto-loader": "^0.7.13",
     "apollo-server-errors": "^3.3.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
+    "grpc-tools": "^1.12.4",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "typeorm": "^0.3.20"
@@ -30,6 +33,8 @@
     "@graphql-codegen/typescript-document-nodes": "^4.0.8",
     "@graphql-codegen/typescript-resolvers": "4.2.0",
     "@types/node": "^20.14.9",
+    "protobufjs": "^7.3.2",
+    "ts-protoc-gen": "^0.15.0",
     "typescript": "^5.5.2"
   }
 }
