--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "graphql-codegen --config codegen.ts",
-    "compile": "rm -rf ./dist && npm run generate && tsc",
-    "start": "npm run compile && node ./dist/index.js"
+    "compile": "rm -rf ./dist && tsc && npm run copy-protobuf",
+    "start": "npm run compile && node ./dist/index.js",
+    "copy-protobuf": "copyfiles -u 1 src/grpc/__protobuf_generated__/**/* dist"
   },
   "keywords": [],
   "author": "",
@@ -33,8 +34,11 @@
     "@graphql-codegen/typescript-document-nodes": "^4.0.8",
     "@graphql-codegen/typescript-resolvers": "4.2.0",
     "@types/node": "^20.14.9",
+    "copyfiles": "^2.4.1",
     "protobufjs": "^7.3.2",
     "ts-protoc-gen": "^0.15.0",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "grpc_tools_node_protoc_ts": "^5.3.2",
+    "grpc-tools": "^1.11.2"
   }
 }
